-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
None
-
OS X 10.6.8 with NVIDIA GeForce GT 120
In the following code, the Image does not display for me, unless antialiasing is set to false.
import QtQuick 2.0 Rectangle { width: 400; height: 400 Image { source: "image.png" anchors.centerIn: parent antialiasing: true //works correctly when this line is removed } }
This code works fine on another machine, so may be OS/Hardware specific.
| For Gerrit Dashboard: QTBUG-26563 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 31054,2 | Correct attribute name in image shader. | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |