Correct attribute name in image shader.

Task-number: QTBUG-26563
Change-Id: I346bc155aa16e92367dee2082974856769bad90a
Reviewed-by: Glenn Watson <glenn.watson@nokia.com>